--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Build app
-      run: make
+      run: make build
 
     - name: Archive app
       run: |
