--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -17,8 +17,8 @@ jobs:
 
     - name: Set up Node.js
       uses: actions/setup-node@main
-      with:
-        node-version: '16'
+#      with:
+#        node-version: '20'
 
     - name: Install dependencies
       run: npm install
