--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nextcloud/router": "^3.0.1",
     "@nextcloud/vue": "^8.24.0",
     "path-parse": "^1.0.7",
-    "vue": "^2.7.15"
+    "vue": "^2.7.15",
+    "terser-webpack-plugin": "^1.0.0"
   }
 }
