--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -42,27 +42,51 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@main
 
-    - name: Determine if it is a release or pre-release
-      id: determine_release_type
-      run: |
-        if [[ "${{ github.ref }}" == refs/tags/v*.*.* ]]; then
-          echo "release_type=false" >> $GITHUB_ENV
-        else
-          echo "release_type=true" >> $GITHUB_ENV
-        fi
+  - name: Determine if it is a release or pre-release
+    id: determine_release_type
+    run: |
+      if [[ "${{ github.ref }}" == refs/tags/v*.*.* ]]; then
+        echo "release_type=false" >> $GITHUB_ENV
+      else
+        echo "release_type=true" >> $GITHUB_ENV
+      fi
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@main
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        body: |
-          Automated release of the app.
-        draft: false
-        prerelease: ${{ env.release_type }}
+  - name: Check if release exists
+    id: check_release
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    run: |
+      release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+        "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
+        | jq -r '.id')
+      if [[ "$release_id" == "null" ]]; then
+        echo "release_exists=false" >> $GITHUB_ENV
+      else
+        echo "release_exists=true" >> $GITHUB_ENV
+        echo "release_id=$release_id" >> $GITHUB_ENV
+      fi
+
+  - name: Create or update Release
+    if: env.release_exists == 'false'
+    id: create_release
+    uses: actions/create-release@main
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    with:
+      tag_name: ${{ github.ref_name }}
+      release_name: Release ${{ github.ref_name }}
+      body: |
+        Automated release of the app.
+      draft: false
+      prerelease: ${{ env.release_type }}
+
+  - name: Update existing Release
+    if: env.release_exists == 'true'
+    run: |
+      curl -s -X PATCH -H "Authorization: token $GITHUB_TOKEN" \
+        -d '{"tag_name":"${{ github.ref_name }}","name":"Release ${{ github.ref_name }}","body":"Automated release of the app.","draft":false,"prerelease":'${{ env.release_type }}'}' \
+        "https://api.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}"
+
 
     - name: Download build artifacts
       uses: actions/download-artifact@main
