--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -94,9 +94,12 @@ jobs:
       
     - name: Generate signature
       run: |
-        openssl dgst -sha512 -sign ${{ secrets.SIGNING_KEY }} -out nextcloud-transfer.tar.gz.sig nextcloud-transfer.tar.gz
-        openssl base64 -in nextcloud-transfer.tar.gz.sig -out nextcloud-transfer.tar.gz.sig.base64
-
+        if [ -f nextcloud-transfer.tar.gz ]; then
+          openssl dgst -sha512 -sign ${{ secrets.SIGNING_KEY }} -out nextcloud-transfer.tar.gz.sig nextcloud-transfer.tar.gz
+          openssl base64 -in nextcloud-transfer.tar.gz.sig -out nextcloud-transfer.tar.gz.sig.base64
+        else
+          echo "File not found: nextcloud-transfer.tar.gz" && exit 1
+  
     - name: Upload release asset
       id: upload-release-asset
       uses: actions/upload-release-asset@main
@@ -113,3 +116,16 @@ jobs:
         asset_path: ./nextcloud-transfer.tar.gz.sig.base64
         asset_name: nextcloud-transfer.tar.gz.sig.base64
         asset_content_type: text/plain
+
+  sign:
+    needs: [build, release]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Docker
+      run: |
+        docker pull nextcloud:latest
+        docker run --rm -v "$(pwd):/var/www/html" nextcloud:latest php occ integrity:sign-app
