--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -57,7 +57,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-          "https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
+          "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
           | jq -r '.id')
         if [[ "$release_id" == "null" ]]; then
           echo "release_exists=false" >> $GITHUB_ENV
@@ -85,7 +85,7 @@ jobs:
       run: |
         curl -s -X PATCH -H "Authorization: token $GITHUB_TOKEN" \
           -d '{"tag_name":"${{ github.ref_name }}","name":"Release ${{ github.ref_name }}","body":"Automated release of the app.","draft":false,"prerelease":'${{ env.release_type }}'}' \
-          "https://api.github.com/repos/${{ github.repository }}/releases/${{ env.release_id }}"
+          "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/releases/${{ env.release_id }}"
 
     - name: Download build artifacts
       uses: actions/download-artifact@main
