--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -59,7 +59,7 @@ jobs:
         release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
           "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
           | jq -r '.id')
-        if [[ "$release_id" == "null" ]]; then
+        if [ -z "$release_id" ]; then
           echo "release_exists=false" >> $GITHUB_ENV
         else
           echo "release_exists=true" >> $GITHUB_ENV
