--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -81,7 +81,7 @@ jobs:
         prerelease: ${{ env.release_type }}
 
     - name: Update existing Release
-      if: env.release_exists == 'truee'
+      if: env.release_exists == 'true'
       run: |
         curl -s -X PATCH -H "Authorization: token $GITHUB_TOKEN" \
           -d '{"tag_name":"${{ github.ref_name }}","name":"Release ${{ github.ref_name }}","body":"Automated release of the app.","draft":false,"prerelease":'${{ env.release_type }}'}' \
