--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -91,10 +91,10 @@ jobs:
     - name: Construct release url
       id: check_url
       run: |
-        if [ ${{ env.release_exists }} == 'false' ]; then
-          release_url=${{ steps.create_release.outputs.upload_url }}
-        else
+        if [ ${{ env.release_exists }} ]; then
           release_url=${{ steps.update_release.outputs.upload_url }}
+        else
+          release_url=${{ steps.create_release.outputs.upload_url }}
         fi
         echo "release_url=$release_url" >> $GITHUB_ENV
 
@@ -122,7 +122,7 @@ jobs:
       id: upload-release-asset
       uses: actions/upload-release-asset@main
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ env.release_url }}
         asset_path: ./nextcloud-transfer.tar.gz
         asset_name: nextcloud-transfer.tar.gz
         asset_content_type: application/gzip
@@ -132,7 +132,7 @@ jobs:
     - name: Upload signature
       uses: actions/upload-release-asset@main
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        upload_url: ${{ env.release_url }}
         asset_path: ./nextcloud-transfer.tar.gz.sig.base64
         asset_name: nextcloud-transfer.tar.gz.sig.base64
         asset_content_type: text/plain
