--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -56,14 +56,16 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        release_id=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-          "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/releases/tags/${{ github.ref_name }}" \
-          | jq -r '.id')
+        response=$(curl -s -H "Authorization: token $GITHUB_TOKEN" "https://api.github.com/repos/${{ github.repository_owner }}/${{ github.repository }}/releases/tags/${{ github.ref_name }}")
+        release_id=$(echo $response | jq -r '.id')
         if [ -z "$release_id" ]; then
           echo "release_exists=false" >> $GITHUB_ENV
+          upload_url=$(echo $response | jq -r '.upload_url')
+          echo "release_url=$upload_url" >> $GITHUB_ENV
         else
           echo "release_exists=true" >> $GITHUB_ENV
           echo "release_id=$release_id" >> $GITHUB_ENV
+          echo "release_url=null" >> $GITHUB_ENV
         fi
 
     - name: Create
@@ -92,7 +94,7 @@ jobs:
       id: check_url
       run: |
         if [ ${{ env.release_exists }} ]; then
-          release_url=${{ steps.update_release.outputs.upload_url }}
+          release_url=${{ env.release_url }}
         else
           release_url=${{ steps.create_release.outputs.upload_url }}
         fi
