--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -141,7 +141,10 @@ jobs:
       env:
         PRIVATE_KEY: ${{ secrets.SIGNING_KEY }}
       run: |
-        printenv PRIVATE_KEY > appinfo/private.key
+        mkdir -p certificates
+        mv appinfo/transfer.csr certificates/transfer.csr
+        mv appinfo/transfer.crt certificates/transfer.crt
+        printenv PRIVATE_KEY > certificates/private.key
         
     - name: Prepare config file
       run: |
@@ -153,10 +156,11 @@ jobs:
         docker run --rm \
           --user 33 \
           -v "$(pwd):/var/www/html" \
+          -v "certificates:~/nextcloud/certificates
           -w /var/www/html \
           nextcloud:latest \
-          sh -c "sleep 30 && \
+          sh -c "sleep 30 && ls -lah ~/ \
           php /usr/src/nextcloud/occ integrity:sign-app \
-            --privateKey==appinfo/private.key \
-            --certificate=appinfo/transfer.crt \
+            --privateKey==~/nextcloud/certificates/private.key \
+            --certificate=~/nextcloud/certificates/transfer.crt \
             --path=/var/www/html/"
