--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -163,7 +163,7 @@ jobs:
           -v "$(pwd)/config:/var/www/html/config" \
           -w /var/www/html \
           nextcloud:latest \
-          sh -c "sleep 30 && ls -lah ~/ \
+          sh -c "sleep 30 && ls -lah ~/ && \
           php /usr/src/nextcloud/occ integrity:sign-app \
             --privateKey==~/.nextcloud/certificates/transfer.key \
             --certificate=~/.nextcloud/certificates/transfer.crt \
