--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -165,7 +165,7 @@ jobs:
     - name: Prepare config file
       run: |
         mkdir -p config
-        echo "<?php $CONFIG = array ('config_is_read_only' => true,); " > config/config.php
+        echo "<?php 'config_is_read_only' => true, " > config/config.php
         chmod -R 777 config
 
     - name: Run occ integrity:sign-app in Docker
